libs/wingc/src/jsify/snapshots/unqualified_lift.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Errors
Cannot qualify access to a lifted object 6:6
