libs/wingc/src/jsify/snapshots/var_inflight_field_from_inflight.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Code

```w

    class MyType {
      inflight var s: str;
      inflight init() {
        this.s = "hey there!";
      }
      inflight foo() {
        log(this.s);
        this.s = "hello!";
      }
    }
    
```

## inflight.MyType-a85f7bc6.js

```js
module.exports = function({  }) {
  class MyType {
    constructor({  }) {
    }
    async foo() {
      {console.log(this.s)};
      this.s = "hello!";
    }
    async $inflight_init() {
      this.s = "hey there!";
    }
  }
  return MyType;
}
```

## preflight.js

```js
const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const $wing_is_test = process.env.WING_IS_TEST === "true";
const std = $stdlib.std;
class $Root extends $stdlib.std.Resource {
  constructor(scope, id) {
    super(scope, id);
    class MyType extends $stdlib.std.Resource {
      constructor(scope, id, ) {
        super(scope, id);
        this._addInflightOps("foo", "$inflight_init", "s");
      }
      static _toInflightType(context) {
        return $stdlib.core.NodeJsCode.fromInline(`
          require("./inflight.MyType-a85f7bc6.js")({
          })
        `);
      }
      _toInflight() {
        return $stdlib.core.NodeJsCode.fromInline(`
          (await (async () => {
            const MyTypeClient = ${MyType._toInflightType(this).text};
            const client = new MyTypeClient({
            });
            if (client.$inflight_init) { await client.$inflight_init(); }
            return client;
          })())
        `);
      }
    }
  }
}
const $App = $stdlib.core.App.for(process.env.WING_TARGET);
new $App({ outdir: $outdir, name: "main", rootConstruct: $Root, plugins: $plugins, isTestEnvironment: $wing_is_test }).synth();
```

